--- a/meetmeserver/src/main/webapp/makeAppointment_nicolas.html
+++ b/meetmeserver/src/main/webapp/makeAppointment_nicolas.html
@@ -78,7 +78,9 @@
 <hr>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="js/jquery-1.11.2.min.js"></script>
-
+<script>
+  localStorage.setItem("advisorName", "Nicolas");
+</script>
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="js/bootstrap.js"></script>
 </body>
