--- a/meetmeserver/src/main/webapp/immediatelyInfos.html
+++ b/meetmeserver/src/main/webapp/immediatelyInfos.html
@@ -127,6 +127,12 @@
     </div>
   </div>
 </footer>
+<script>
+
+    function showWaitingPage() {
+        window.location.assign("Waiting.html");
+    }
+</script>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="js/jquery-1.11.2.min.js"></script>
