--- a/meetmeserver/src/main/webapp/appointmentType.html
+++ b/meetmeserver/src/main/webapp/appointmentType.html
@@ -49,11 +49,11 @@
   </div>
 
   <div class="jumbotron">
-    <div class="row"> <img class="img-responsive img-rounded center-block" style="max-height:200px;" src="img/Hwee-Leng-Toh-Heng.jpg"/> </div>
+    <div class="row"> <img class="img-responsive img-rounded center-block" id="advisorImage" style="max-height:200px;" /> </div>
     <br>
     <div class="row">
     <div class="col-xs-5 col-xs-offset-1"> 
-    <button type="button" class="btn btn-default btn-block" onClick="window.location='Waiting.html';"><span class="glyphicon glyphicon-circle-arrow-up btn-block"></span><br>
+    <button type="button" class="btn btn-default btn-block" onClick="window.location='immediatelyInfos.html';"><span class="glyphicon glyphicon-circle-arrow-up btn-block"></span><br>
         <t class="text-center lead"><strong>See Learning Advisor immediately</strong></t>
         </button>
     </div>
@@ -78,9 +78,37 @@
 <hr>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="js/jquery-1.11.2.min.js"></script>
+
 <script>
-  localStorage.setItem("advisorName", "Hwee");
+
+  var advisorName = localStorage.getItem("advisorName").toString();
+  var src = "";
+
+  switch(advisorName) {
+    case "george":
+      src = "img/George-Jacobs.jpg";
+      break;
+    case "hwee":
+      src = "img/Hwee-Leng-Toh-Heng.jpg";
+      break;
+    case "nimrod":
+      src = "img/n_delante.jpg";
+      break;
+    case "michael":
+      src = "img/Michael-Joyce.jpg";
+      break;
+    case "nicolas":
+      src = "img/Nicolas-Greliche.jpg";
+      break;
+    case "tang":
+      src = "img/Tang-Chun-Meng.jpg";
+      break;
+    default:
+    src = "img/400x400.gif";
+  }
+  document.getElementById("advisorImage").src=src;
 </script>
+
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="js/bootstrap.js"></script>
 </body>
