--- a/meetmeserver/src/main/webapp/immediatelyInfos.html
+++ b/meetmeserver/src/main/webapp/immediatelyInfos.html
@@ -63,7 +63,7 @@
     </div>
   </div>
   <hr>
-  <form role="form" action="meetmeserver/api/lecturer/appointment" method="post">
+  <form role="form" action="Waiting.html" method="post">
   <div class="row">
 
     <div class="col-sm-6 col-sm-offset-3">
