rest functions partially added to frontend

--- a/meetmeserver/src/main/webapp/MakeAppointment.html
+++ b/meetmeserver/src/main/webapp/MakeAppointment.html
@@ -67,7 +67,7 @@
   </div>
   <hr>
   <!--<form role="form" action="meetmeserver/api/lecturer/appointment" method="post">-->
-    <form role="form" action="appointment">
+    <form role="form" action="api/lecturer/appointment" method="post">
   <div class="row">
 
     <div class="col-sm-4 col-sm-offset-1">
