--- a/meetmeserver/src/main/webapp/showAppointments.html
+++ b/meetmeserver/src/main/webapp/showAppointments.html
@@ -86,7 +86,7 @@
   </div>
 </div>
 <br>
-<form>
+<form class="form-control" action="api/notification/AppReply" method="post">
 <div class="jumbotron">
     <div role="form">
   <div class="row">
