--- a/meetmeserver/src/main/webapp/loginPage.html
+++ b/meetmeserver/src/main/webapp/loginPage.html
@@ -56,7 +56,7 @@
     </div>
   </div>
     <hr>
-    <form role="form" action="login">
+    <form role="form" action="api/lecturer/login">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
 
