--- a/meetmeserver/src/main/webapp/loginPage.html
+++ b/meetmeserver/src/main/webapp/loginPage.html
@@ -66,7 +66,7 @@
                 <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
 
                 <br>
-                <button type="submit" class="btn btn-default btn-block" onclick="submitFunction()"><strong>Submit</strong></button>
+                <button type="submit" class="btn btn-default btn-block"><strong>Submit</strong></button>
                 </div>
 
 
