--- a/meetmeserver/src/main/webapp/advisorInterface.html
+++ b/meetmeserver/src/main/webapp/advisorInterface.html
@@ -136,7 +136,7 @@
                   case "nicolas":
                       src = "img/Nicolas-Greliche.jpg";
                       name ="Nicolas Greliche";
-                          lastname="Greliche";
+                          lastname="Nicolas";
                       break;
                   case "tang":
                       src = "img/Tang-Chun-Meng.jpg";
@@ -267,7 +267,7 @@ YUI().use('calendar', 'datatype-date', 'cssbutton',  function(Y) {
 
 });
 
-document.getElementById("advisorName").value = localStorage.getItem("advisorName").toString();
+//document.getElementById("advisorName").value = localStorage.getItem("advisorName").toString();
     function setTime(){
         document.getElementById('selectedstarttime').innerHTML = 'Selected Start Time: ' + document.getElementById("startHour").value.toString() + ":" + document.getElementById("startMinute").value.toString();
         document.getElementById('selectedendtime').innerHTML = 'Selected End Time: ' + document.getElementById("endHour").value.toString() + ":" + document.getElementById("endMinute").value.toString();
