--- a/meetmeserver/src/main/webapp/loginPage.html
+++ b/meetmeserver/src/main/webapp/loginPage.html
@@ -56,7 +56,7 @@
     </div>
   </div>
     <hr>
-    <form role="form" action="api/lecturer/login">
+    <form role="form" action="api/lecturer/login" onsubmit="return submitFunction()">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
 
@@ -66,7 +66,7 @@
                 <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
 
                 <br>
-                <button type="submit" class="btn btn-default btn-block"><strong>Submit</strong></button>
+                <button type="submit" class="btn btn-default btn-block" ><strong>Submit</strong></button>
                 </div>
 
 
@@ -105,6 +105,9 @@
         {localStorage.setItem("accountName", "tang");}
         else if(stringContains(document.getElementById("email").value.toString().toLowerCase(), "michael"))
         {localStorage.setItem("accountName", "michael");}
+
+
+        return true;
     }
 
 
