--- a/meetmeserver/src/main/webapp/advisorInterface.html
+++ b/meetmeserver/src/main/webapp/advisorInterface.html
@@ -136,7 +136,7 @@
                   case "nicolas":
                       src = "img/Nicolas-Greliche.jpg";
                       name ="Nicolas Greliche";
-                          lastname="Nicolas";
+                          lastname="Greliche";
                       break;
                   case "tang":
                       src = "img/Tang-Chun-Meng.jpg";
